--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,6 +9,8 @@ jobs:
       matrix:
         operating-system: [ ubuntu-20.04, ubuntu-18.04, macos-11, macos-10.15 ]
     steps:
+      - name: "Show PHP Path"
+        run: which php
       - name: "Show PHP Version"
         run: php -v
       - name: "List PHP Extensions"
