横道にそれる（.NETのバージョンがどこにインストールされているか気になった）

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,12 +7,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-20.04, ubuntu-18.04, macos-11, macos-10.15 ]
+        operating-system: [ ubuntu-20.04, ubuntu-18.04 ]
     steps:
-      - name: "List /usr/bin"
-        run: ls -al /usr/bin
-      - name: "List /usr/local/bin"
-        run: ls -al /usr/local/bin
+      - name: "List /usr/share"
+        run: ls -al /usr/share
+      - name: "List /usr/share/dotnet"
+        run: ls -al /usr/share/dotnet
       - name: "Show PHP Version"
         run: php -v
       - name: "List PHP Extensions"
